<resources>
    <string name="app_name">Basketball</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_a_city_and_dominate_in_a_league">Find a team in a city and dominate in a league</string>
    <string name="get_started">Get Started</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_eds">Co-eds</string>
    <string name="next">Next</string>
    <string name="background_image">background image</string>
    <string name="logo">Logo</string>
    <string name="Logo">logo</string>
    <string name="background_image2">background image</string>
    <string name="todo">TODO</string>
    <string name="i_am_a_beginner">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">baller</string>
    <string name="finish">finish</string>
</resources>
